@@ -7,6 +7,12 @@
   Windows again (fault introduced by 4.06 Unicode changes).
   (David Allsopp)
 
+### Build system:
+
+- #9938, #9939: Define __USE_MINGW_ANSI_STDIO=0 for the mingw-w64 ports to
+  prevent their C99-compliant snprintf conflicting with ours.
+  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)
+
 ### Runtime system:
 
 - GPR#1752: do not alias function arguments to sigprocmask.
